Define all MM udev tags in a common header
Instead of writing and rewriting all the time the udev tags directly in the code as strings, we should just define all of them in a single header, providing proper explanations of what they mean, and then use the symbols in the code instead of the raw strings.